// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`postcss-extract-animations should extract animations from more complex declarations 1`] = `
"@keyframes anim-c4fe818f {
        to {
            opacity: 1;
        }
}
.a {
    animation: 1s ease-in 1s 2 reverse both paused anim-c4fe818f
}"
`;

exports[`postcss-extract-animations should extract animations from more complex selectors 1`] = `
"@keyframes anim-7947fab3 {
        to {
            opacity: 1;
        }
}
.a .b > div > a[animate] {
    animation: 1s anim-7947fab3
}"
`;

exports[`postcss-extract-animations should extract animations from simple selectors 1`] = `
"@keyframes anim-c4fe818f {
        to {
            opacity: 1;
        }
}
.a {
    animation: 1s anim-c4fe818f
}"
`;

exports[`postcss-extract-animations shouldn't touch declarations around the animation 1`] = `
"@keyframes anim-c4fe818f {
        to {
            opacity: 1;
        }
}
.a {
    color: #FFF;
    animation: 1s anim-c4fe818f;
    background: red;
}"
`;

exports[`postcss-extract-animations shouldn't touch normal animation decls 1`] = `
"@keyframes anim-c4fe818f {
        to {
            opacity: 1;
        }
}
.a {
    animation: 1s reveal;
    animation: 1s anim-c4fe818f
}"
`;
